analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/labelUnderscore.kt
fun main() {
    _@ while (true) {
        <expr>var j = 1</expr>
    }
}